# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

alias(
    name = "threadx_core_configuration_default",
    actual = select(
        {
            "//bazel/platform/constraints/soc:s32k148": "//executables/referenceApp/platforms/s32k148evb/threadXCoreConfiguration:threadx_core_configuration",
            "@platforms//os:linux": "//executables/referenceApp/platforms/posix/threadXCoreConfiguration:threadx_core_configuration",
        },
        no_match_error = "No ThreadX core configuration for this platform. Override --//libs/bsw/asyncThreadX:threadx_core_configuration with your own configuration target.",
    ),
)

# ThreadX core configuration (Hook.h, ThreadCConfig.h and platform wiring).
#   Default:  select based on the target platform (S32K148, POSIX)
#   Override: --//libs/bsw/asyncThreadX:threadx_core_configuration=//path/to:your_config
label_flag(
    name = "threadx_core_configuration",
    build_setting_default = ":threadx_core_configuration_default",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "async_threadx",
    hdrs = glob(["include/**/*.h"]),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/3rdparty/threadx",
        "//libs/bsp/bspInterrupts:bsp_interrupts_threadx_impl",
        "//libs/bsw/asyncImpl:async_impl",
        "//libs/bsw/bsp",
        "//libs/bsw/common",
        "//libs/bsw/timer",
    ],
)

cc_library(
    name = "threadx_configuration",
    hdrs = [
        "threadXConfiguration/ThreadXConfig.h",
        "threadXConfiguration/async/Hook.h",
    ],
    strip_include_prefix = "threadXConfiguration",
    visibility = ["//visibility:public"],
    deps = [
        ":threadx_core_configuration",
        "//libs/bsw/asyncFreeRtos:async_core_configuration",
        "//libs/bsw/platform",
    ],
)

cc_library(
    name = "async_threadx_impl",
    srcs = [
        "src/async/FutureSupport.cpp",
        "src/async/Types.cpp",
    ],
    implementation_deps = [
        ":async_threadx",
        ":threadx_configuration",
        "//executables/referenceApp/asyncBinding:async_binding_threadx",
        "//libs/3rdparty/etl",
        "//libs/bsw/util",
    ],
    visibility = ["//visibility:public"],
)
