# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "docan",
    srcs = [
        "src/docan/common/DoCanLogger.cpp",
        "src/docan/datalink/DoCanFrameCodecConfigPresets.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/3rdparty/etl",
        "//libs/bsp/bspInterrupts:bsp_interrupts",
        "//libs/bsw/async",
        "//libs/bsw/common",
        "//libs/bsw/cpp2can",
        "//libs/bsw/platform",
        "//libs/bsw/transport",
        "//libs/bsw/util",
    ],
)
